[package]
edition = "2018"
name = "zss"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# X11
#x11rb = "0.8.1"
x11 = {version = "2.18.2", features = ["xlib", "glx", "xrender"]}

# Opengl
gl = "0.14.0"

# Image
image = "0.23.14"

# Random
rand = "0.8.4"

# Error handling
anyhow = "1.0.40"

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Cmd
clap = "2.33.3"

# Util
