[package]
edition = "2018"
name = "zss"
version = "1.0.0"

[dependencies]

# X11
#x11rb = "0.8.1"
x11 = {version = "2.18.2", features = ["xlib", "glx", "xrender"]}

# Opengl
glium = {version = "0.30.1", default-features = false, features = []}

# Image
image = "0.23.14"

# Random
rand = "0.8.4"

# Error handling
anyhow = "1.0.40"

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Cmd
clap = "2.33.3"

# Util
