[package]
categories = []
description = "Scrolling wallpaper based on X screens."
edition = "2018"
keywords = []
license = "MIT"
name = "zss"
repository = "https://github.com/Zenithsiz/zss"
version = "1.0.2"

[dependencies]

# Opengl
glium = {version = "0.30.1", default-features = false, features = ["glutin"]}

# Math
cgmath = "0.18.0"

# Image
image = "0.23.14"

# Random
rand = "0.8.4"

# Error handling
anyhow = "1.0.40"

# Logging
log = "0.4.14"
simplelog = "0.10.0"

# Cmd
clap = "2.33.3"

# Util
num-rational = "0.4.0"

# Filesystem
notify = "4.0.17"
